add:admin:campsite_action

--- a/app/views/admin/campsites/edit.html.erb
+++ b/app/views/admin/campsites/edit.html.erb
@@ -9,6 +9,6 @@
 		<%= f.label :explanation %>
 		<%= f.text_field :explanation %>
 	</div>
-	<%= f.submit "登録する", class:"btn btn-success" %>
+	<%= f.submit "更新する", class:"btn btn-success" %>
 	<% end %>
 </div>
