--- a/app/views/admin/campsites/index.html.erb
+++ b/app/views/admin/campsites/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Admin::Campsites#index</h1>
-<p>Find me in app/views/admin/campsites/index.html.erb</p>
+<div>
+	<h1>キャンプサイト一覧</h1>
+	<div>
+		<% @campsites.each do |campsite| %>
+		<div>
+			<%= campsite.name %>
+			<%= campsite.explanation %>
+			<%= link_to "詳細", admin_campsite_path(campsite), class:"btn btn-success" %>
+		</div>
+		<% end %>
+	</div>
+</div>
