--- a/app/views/admin/campsites/edit.html.erb
+++ b/app/views/admin/campsites/edit.html.erb
@@ -1,7 +1,7 @@
 <div>
 	<h1>キャンプサイトを登録する</h1>
 	<%= form_with model: [:admin, @campsite] do |f| %>
-	<div>
+	<div class="form-group">
 		<%= f.label :name %>
 		<%= f.text_field :name %>
 	</div>
