fix:devise_path

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,10 @@
             <% if user_signed_in? %>
               <li><%= link_to "ホーム", "", class:"nav-item nav-link", 'data-turbolinks':false %></li>
               <li><%= link_to "マイページ", "", class:"nav-item nav-link", 'data-turbolinks':false %></li>
-              <li><%= link_to "ログアウト", "", method: :delete, class:"nav-item nav-link" %></li>
+              <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class:"nav-item nav-link" %></li>
             <% else %>
               <li><%= link_to "新規登録", new_user_registration_path, class:"nav-item nav-link", 'data-turbolinks':false %></li>
-              <li><%= link_to "ログイン", user_session_path, class:"nav-item nav-link" %></li>
+              <li><%= link_to "ログイン", new_user_session_path, class:"nav-item nav-link" %></li>
               <li><%= link_to "about", "", class:"nav-item nav-link" %></li>
             <% end %>
           </ul>
