--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,2 +1,10 @@
-<h1>Public::Homes#top</h1>
-<p>Find me in app/views/public/homes/top.html.erb</p>
+<div class="container">
+	<div class="row">
+		<div class="col-12">
+			<h1>JoyCamp！</h1>
+			<%= link_to "ログインはこちら", new_user_session_path, class:"btn btn-primary" %>
+			<%= link_to "新規登録はこちら", new_user_registration_path, class:"btn btn-success" %>
+		</div>
+	</div>
+</div>
+
