--- a/app/views/admin/campsites/new.html.erb
+++ b/app/views/admin/campsites/new.html.erb
@@ -1,14 +1,36 @@
-<div>
-	<h1>キャンプサイトを登録する</h1>
-	<%= form_with model: [:admin, @campsite] do |f| %>
-	<div>
-		<%= f.label :name %>
-		<%= f.text_field :name %>
+<div class="container">
+	<div class="row justify-content-center">
+		<div class="col-8">
+			<h1>キャンプサイトを登録する</h1>
+			<%= form_with model: [:admin, @campsite] do |f| %>
+			<div class="form-group">
+				<%= f.label :name %>
+				<%= f.text_field :name, class:"form-control" %>
+			</div>
+			<div class="form-group">
+				<%= f.label :explanation %>
+				<%= f.text_field :explanation, class:"form-control" %>
+			</div>
+			<div class="form-group">
+				<%= f.label :postcode %>
+				<%= f.text_field :postcode, class:"form-control" %>
+			</div>
+			<div class="form-group">
+			  <%= f.label :prefecture_code %><br />
+			  <%= f.text_field :prefecture_code, class:"form-control" %>
+			</div>
+
+			<div class="form-group">
+			  <%= f.label :address_city %><br />
+			  <%= f.text_field :address_city, class:"form-control" %>
+			</div>
+
+			<div class="form-group">
+			  <%= f.label :address_street %><br />
+			  <%= f.text_field :address_street, class:"form-control" %>
+			</div>
+			<%= f.submit "登録する", class:"btn btn-success" %>
+			<% end %>
+		</div>
 	</div>
-	<div>
-		<%= f.label :explanation %>
-		<%= f.text_field :explanation %>
-	</div>
-	<%= f.submit "登録する", class:"btn btn-success" %>
-	<% end %>
 </div>
