--- a/app/views/public/campsites/show.html.erb
+++ b/app/views/public/campsites/show.html.erb
@@ -12,6 +12,17 @@
 					<%= @campsite.prefecture_code %>
 					<%= @campsite.address_city %>
 					<%= @campsite.address_street %>
+					<% if @campsite.favorited_by?(current_user) %>
+						<%= link_to public_campsite_favorite_path(@campsite, current_user), method: :delete do %>
+							<!-- <i class="fas fa-heart"></i> -->
+							いいねを外す
+						<% end %>
+					<% else %>
+						<%= link_to public_campsite_favorites_path(@campsite), method: :post do %>
+							<!-- <i class="far fa-heart", id="like-off"></i> -->
+							いいね
+						<% end %>
+					<% end %>
 				</div>
 			</div>
 		</div>
