--- a/app/views/admin/campsites/index.html.erb
+++ b/app/views/admin/campsites/index.html.erb
@@ -1,12 +1,25 @@
-<div>
-	<h1>キャンプサイト一覧</h1>
-	<div>
-		<% @campsites.each do |campsite| %>
-		<div>
-			<%= campsite.name %>
-			<%= campsite.explanation %>
-			<%= link_to "詳細", admin_campsite_path(campsite), class:"btn btn-success" %>
+<div class="cantainer">
+	<div class="row justify-content-center">
+		<div class="col-10">
+			<table>
+				<h3>キャンプサイト一覧</h3>
+				<thead>
+					<tr>
+						<th class="w-30">キャンプ場名</th>
+						<th class="w-50">説明</th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					<% @campsites.each do |campsite| %>
+					<tr>
+						<td><%= campsite.name %></td>
+						<td><%= campsite.explanation %></td>
+						<td><%= link_to "詳細", admin_campsite_path(campsite), class:"btn btn-success" %></td>
+					</tr>
+					<% end %>
+				</tbody>
+			</table>
 		</div>
-		<% end %>
 	</div>
 </div>
