--- a/app/views/admin/campsites/new.html.erb
+++ b/app/views/admin/campsites/new.html.erb
@@ -13,8 +13,10 @@
 				<%= f.text_field :explanation, class:"form-control" %>
 			</div>
 			<div class="form-group">
-				<%= f.label :genre_id %>
-				<%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "選択して下さい" %>
+				<%#= f.label :genre_id %>
+				<%= f.collection_check_boxes(:genre_ids, Genre.all, :id, :name) do |b| %>
+					<%= b.label { b.check_box + b.text } %>
+				<% end %>
 			</div>
 			<div class="form-group">
 				<%= f.label :postcode %>
