--- a/app/views/publisher/genres/new.html.erb
+++ b/app/views/publisher/genres/new.html.erb
@@ -1,12 +1,9 @@
 <div class="container">
 	<div class="row">
 		<div class="col-10">
-			<h3>ジャンルを追加する</h3>
-			<%= form_with model: @genre do |f| %>
-			<div class="form-group">
+			<%= form_with model: [:publisher, @genre] do |f| %>
 				<%= f.label :name %>
 				<%= f.text_field :name, class:"form-control" %>
-			</div>
 				<%= f.submit "作成", class:"btn btn-success" %>
 			<% end %>
 		</div>
