--- a/app/views/admin/campsites/index.html.erb
+++ b/app/views/admin/campsites/index.html.erb
@@ -3,6 +3,7 @@
 		<div class="col-10">
 			<table>
 				<h3>キャンプサイト一覧</h3>
+				<%= link_to "キャンプ場を登録する", new_admin_campsite_path, class:"btn btn-success" %>
 				<thead>
 					<tr>
 						<th class="w-30">キャンプ場名</th>
