--- a/app/views/admin/campsites/show.html.erb
+++ b/app/views/admin/campsites/show.html.erb
@@ -6,6 +6,9 @@
 				<% @campsite.genres.each do |genre| %>
 					<%= genre.name %>
 				<% end %>
+				<% @campsite.campsite_images.each do |image| %>
+					<%= attachment_image_tag(image, :image, :fill, 300, 300, format: "jpeg", fallback: "no_image.jpeg", size: "100x100") %>
+				<% end %>
 				<%= link_to "編集", edit_admin_campsite_path(@campsite), class:"btn btn-success" %>
 				<%= link_to "削除", admin_campsite_path(@campsite), method: :delete, class:"btn btn-danger" %>
 			</div>
