--- a/app/views/publisher/publishers/management.html.erb
+++ b/app/views/publisher/publishers/management.html.erb
@@ -1,8 +1,8 @@
 <div class="cantainer">
 	<div class="row justify-content-center">
 		<div class="col-2">
-			<%= link_to "ユーザー管理", "", class:"" %><br>
-			<%= link_to "キャンプ場管理", "", class:"" %><br>
+			<%= link_to "ユーザー管理", publisher_users_path, class:"" %><br>
+			<%= link_to "キャンプ場管理", publisher_campsites_path, class:"" %><br>
 			<%= link_to "キャンプ場管理者管理", "", class:"" %>
 		</div>
 	</div>
