--- a/app/views/public/campsites/index.html.erb
+++ b/app/views/public/campsites/index.html.erb
@@ -1,4 +1,4 @@
-<div class="cantainer">
+<div class="container">
 	<div class="row">
 		<div class="col-11 offset-1">
 			<h3>キャンプ場一覧</h3>
@@ -12,13 +12,13 @@
 			<div class="row">
 				<% @campsites.each do |campsite| %>
 				<div class="col-4">
-					<div class="card">
+					<div class="border">
 						<%= link_to public_campsite_path(campsite.id) do %>
-							<%= attachment_image_tag(campsite.campsite_images[0], :image, :fill, 300, 300, format: "jpeg", fallback: "no-image-camera.png", size: "100x100", class:"img-fluid card-img-top") %>
+							<%= attachment_image_tag(campsite.campsite_images[0], :image, :fill, 500, 500, format: "jpeg", fallback: "no-image-camera.png", size: "200x200", class:"") %>
 						<% end %>
-						<div class="card-body">
-							<%= link_to campsite.name, public_campsite_path(campsite) %>
-							<%= campsite.explanation %>
+						<div class="">
+							<%= link_to campsite.name, public_campsite_path(campsite) %><br>
+							<%= campsite.prefecture.name %>
 						</div>
 					</div>
 				</div>
