--- a/app/views/public/campsites/show.html.erb
+++ b/app/views/public/campsites/show.html.erb
@@ -1,15 +1,13 @@
 <div class="container">
 	<div class="row justify-content-center">
-		<div class="col-8">
+		<div class="col-8 mt-3">
 			<div class="card">
-				<%#= link_to post_path(post.id) do %>
-					<%#= attachment_image_tag(post, :post_image, :fill, 300, 300, format: "jpeg", fallback: "no_image.jpeg", size: "100x100", class:"img-fluid card-img-top") %>
-				<%# end %>
+				<%= attachment_image_tag(@campsite.campsite_images[0], :image, :fill, 300, 200, format: "jpeg", fallback: "no-image-camera.png", size: "100x100", class:"img-fluid card-img-top") %>
 				<div class="card-body">
 					<%= @campsite.name %><br>
 					<%= @campsite.explanation %><br>
 					<%= @campsite.postcode %><br>
-					<%= @campsite.prefecture_code %>
+					<%= @campsite.prefecture.name %>
 					<%= @campsite.address_city %>
 					<%= @campsite.address_street %>
 					<% if @campsite.favorited_by?(current_user) %>
