--- a/app/views/public/campsites/show.html.erb
+++ b/app/views/public/campsites/show.html.erb
@@ -12,14 +12,22 @@
 					<%= @campsite.address_street %>
 					<% if @campsite.favorited_by?(current_user) %>
 						<%= link_to public_campsite_favorite_path(@campsite, current_user), method: :delete do %>
-							<!-- <i class="fas fa-heart"></i> -->
+							<i class="fas fa-heart"></i>
 							いいねを外す
 						<% end %>
 					<% else %>
 						<%= link_to public_campsite_favorites_path(@campsite), method: :post do %>
-							<!-- <i class="far fa-heart", id="like-off"></i> -->
+							<i class="far fa-heart", id="like-off"></i>
 							いいね
 						<% end %>
+					<% end %>
+					<% @campsite_comments.each do |comment| %>
+						<%= comment.comment %>
+					<% end %>
+					<%= form_with model: [:public, @campsite, @campsite_comment] do |f| %>
+						<%= f.label :comment %>
+						<%= f.text_field :comment, class:"form-control" %>
+						<%= f.submit "コメントする", class:"btn btn-success" %>
 					<% end %>
 				</div>
 			</div>
