--- a/app/views/public/campsites/show.html.erb
+++ b/app/views/public/campsites/show.html.erb
@@ -21,22 +21,32 @@
 							いいね
 						<% end %>
 					<% end %>
-					<% @campsite_comments.each do |comment| %>
-						<%= comment.comment %>
-						<div id = "star-rate-<%= comment.id %>"></div>
-						<script>
-						  $('#star-rate-<%= comment.id %>').raty({
-						    size: 36,
-						    starOff:  '<%= asset_path('star-off.png') %>',
-						    starOn : '<%= asset_path('star-on.png') %>',
-						    starHalf: '<%= asset_path('star-half.png') %>',
-						    half: true,
-						    readOnly: true,
-						    score: <%= comment.rate %>,
-						  })
-						</script>
-					<% end %>
-					<%= form_with model: [:public, @campsite, @campsite_comment] do |f| %>
+					<div class="mt-3">
+						<p>○レビュー○</p>
+						<% @campsite_comments.each do |comment| %>
+							<%= comment.comment %>
+							<div id = "star-rate-<%= comment.id %>"></div>
+							<script>
+							  $('#star-rate-<%= comment.id %>').raty({
+							    size: 36,
+							    starOff:  '<%= asset_path('star-off.png') %>',
+							    starOn : '<%= asset_path('star-on.png') %>',
+							    starHalf: '<%= asset_path('star-half.png') %>',
+							    half: true,
+							    readOnly: true,
+							    score: <%= comment.rate %>,
+							  })
+							</script>
+						<% end %>
+					</div>
+				</div>
+			</div>
+			<div class="border">
+				<%= form_with model: [:public, @campsite, @campsite_comment] do |f| %>
+					<div class="form-group">
+						<%= f.label :title %>
+						<%= f.text_field :title, class:"form-control w-50" %>
+					</div>
 					<div class="form-group">
 						<%= f.label :comment %>
 						<%= f.text_field :comment, class:"form-control" %>
@@ -54,10 +64,9 @@
 						    scoreName: 'campsite_comment[rate]',
 						    half: true,
 						  });
-						</script>  
-						<%= f.submit "コメントする", class:"btn btn-success" %>
-					<% end %>
-				</div>
+						</script>
+					<%= f.submit "コメントする", class:"btn btn-success" %>
+				<% end %>
 			</div>
 		</div>
 	</div>
