--- a/app/views/public/campsites/show.html.erb
+++ b/app/views/public/campsites/show.html.erb
@@ -21,6 +21,26 @@
 							いいね
 						<% end %>
 					<% end %>
+					<div id="map">
+					<script>
+						function initMap(){
+							let pos = new google.maps.LatLng(
+							   '<%= @campsite.latitude %>',
+							   '<%= @campsite.longitude %>'
+							  );
+							let map = new google.maps.Map(document.getElementById('map'), {
+							zoom: 12,
+							center: pos
+							});
+
+							marker = new google.maps.Marker({
+		     					position: pos,
+		   						map: map
+		   					});
+						}
+					</script>
+					<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['API_KEY'] %>&callback=initMap" async defer></script>
+					</div>
 					<div class="mt-3">
 						<p>○レビュー○</p>
 						<% @campsite_comments.each do |comment| %>
