--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,12 @@
  	box-sizing: border-box;
 }
 
+.header-color {
+	color: #228B22;
+	background-color: white;
+	border-bottom: 2px #228B22 solid;
+}
+
 #map {
   height: 400px;
 }
