--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <header class="sticky-top">
-      <nav class="navbar navbar-expand-md navbar-dark bg-success">
+      <nav class="navbar navbar-expand-md header-color">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navmenu" aria-controls="navmenu" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
