--- a/app/assets/stylesheets/public/campsites.scss
+++ b/app/assets/stylesheets/public/campsites.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the public/campsites controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.search-box {
+	margin-top: 10px;
+	font-size: 12px;
+}
