--- a/app/views/public/campsites/index.html.erb
+++ b/app/views/public/campsites/index.html.erb
@@ -1,15 +1,10 @@
 <div class="container">
 	<div class="row">
-		<div class="col-11 offset-1">
-			<h3>キャンプ場一覧</h3>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-12 border">
+		<div class="col-12 border search-box">
+			<%= form_with(url: public_campsite_search_path, method: :get, local: true) do |f| %>
 			<div class="row">
 				<div class="col-8">
 					<h5>エリア</h5>
-					<%= form_with(url: public_campsite_search_path, method: :get, local: true) do |f| %>
 						<div>
 							<span>○北海道・東北</span><br>
 							<% JpPrefecture::Prefecture.all[0..6].each do |prefecture| %>
@@ -59,47 +54,45 @@
 							<%= f.check_box :genre_search_params, {multiple: true, include_hidden: false}, "#{genre.id}",nil %>
 							<%= f.label :"#{genre.name}" %>
 						<% end %>
-						<%= f.submit "絞り込み", class:"btn btn-success" %>
-					<% end %>
 				</div>
+				<%= f.submit "絞り込み", class:"btn btn-success" %>
+			<% end %>
 			</div>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-3 border">
-
+		<div class="col-11 offset-1">
+			<h3>キャンプ場一覧</h3>
 		</div>
-		<div class="col-9">
-			<div class="row">
-				<% @campsites.each do |campsite| %>
-				<div class="col-12 col-sm-6 col-lg-4">
-					<div class="card">
-						<%= link_to public_campsite_path(campsite.id) do %>
-							<%= attachment_image_tag(campsite.campsite_images[0], :image, :fill, 300, 200, format: "jpeg", fallback: "no-image-camera.png", size: "200x200", class:"img-fluid card-img-top") %>
-						<% end %>
-						<div class="card-body">
-							<%= link_to campsite.name, public_campsite_path(campsite) %><br>
-							<%= campsite.prefecture.name %><br>
-							<% campsite.genres.each do |genre| %>
-								<span class="badge badge-secondary"><%= genre.name %></span>
-							<% end %><br>
-							<span id = "star-rate-<%= campsite.id %>"></span><span>   (<%= campsite.campsite_comments.count %>)</span>
-							<script>
-							  $('#star-rate-<%= campsite.id %>').raty({
-							    size: 36,
-							    starOff:  '<%= asset_path('star-off.png') %>',
-							    starOn : '<%= asset_path('star-on.png') %>',
-							    starHalf: '<%= asset_path('star-half.png') %>',
-							    half: true,
-							    readOnly: true,
-							    score: <%= campsite.review_average %>,
-							  })
-							</script>
-						</div>
-					</div>
-				</div>
+	</div>
+	<div class="row">
+		<% @campsites.each do |campsite| %>
+		<div class="col-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="card">
+				<%= link_to public_campsite_path(campsite.id) do %>
+					<%= attachment_image_tag(campsite.campsite_images[0], :image, :fill, 300, 200, format: "jpeg", fallback: "no-image-camera.png", size: "200x200", class:"img-fluid card-img-top") %>
 				<% end %>
+				<div class="card-body">
+					<%= link_to campsite.name, public_campsite_path(campsite) %><br>
+					<%= campsite.prefecture.name %><br>
+					<% campsite.genres.each do |genre| %>
+						<span class="badge badge-secondary"><%= genre.name %></span>
+					<% end %><br>
+					<span id = "star-rate-<%= campsite.id %>"></span><span>   (<%= campsite.campsite_comments.count %>)</span>
+					<script>
+					  $('#star-rate-<%= campsite.id %>').raty({
+					    size: 36,
+					    starOff:  '<%= asset_path('star-off.png') %>',
+					    starOn : '<%= asset_path('star-on.png') %>',
+					    starHalf: '<%= asset_path('star-half.png') %>',
+					    half: true,
+					    readOnly: true,
+					    score: <%= campsite.review_average %>,
+					  })
+					</script>
+				</div>
 			</div>
 		</div>
+		<% end %>
 	</div>
 </div>
