--- a/app/views/public/campsites/show.html.erb
+++ b/app/views/public/campsites/show.html.erb
@@ -1,67 +1,114 @@
 <div class="container">
 	<div class="row justify-content-center">
 		<div class="col-8 mt-3">
-			<div class="card">
-				<%= attachment_image_tag(@campsite.campsite_images[0], :image, :fill, 300, 200, format: "jpeg", fallback: "no-image-camera.png", size: "100x100", class:"img-fluid card-img-top") %>
-				<div class="card-body">
-					<%= @campsite.name %><br>
-					<%= @campsite.explanation %><br>
-					<%= @campsite.postcode %><br>
-					<%= @campsite.prefecture.name %>
-					<%= @campsite.address_city %>
-					<%= @campsite.address_street %>
-					<% if @campsite.favorited_by?(current_user) %>
-						<%= link_to public_campsite_favorite_path(@campsite, current_user), method: :delete do %>
-							<i class="fas fa-heart"></i>
-							いいねを外す
-						<% end %>
-					<% else %>
-						<%= link_to public_campsite_favorites_path(@campsite), method: :post do %>
-							<i class="far fa-heart", id="like-off"></i>
-							いいね
+			<div class="carousel slide " id="c1" data-ride="carousel">
+				<ol class="carousel-indicators">
+					<li data-target="#c1" data-slide-to="0" class="active"></li>
+					<%if @campsite.campsite_images[1].present? %>
+						<li data-taget="#c1" data-slide-to="1"></li>
+					<% end %>
+					<%if @campsite.campsite_images[2].present? %>
+						<li data-taget="#c1" data-slide-to="3"></li>
+					<% end %>
+					<%if @campsite.campsite_images[3].present? %>
+						<li data-taget="#c1" data-slide-to="4"></li>
+					<% end %>
+					<%if @campsite.campsite_images[4].present? %>
+						<li data-taget="#c1" data-slide-to="5"></li>
+					<% end %>
+				</ol>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<%= attachment_image_tag(@campsite.campsite_images[0], :image, :fill, 300, 200, format: "jpeg", fallback: "no-image-camera.png", size: "100x100", class:"d-block w-100 slide-height") %>
+					</div>
+					<%if @campsite.campsite_images[1].present? %>
+						<div class="carousel-item">
+							<%= attachment_image_tag(@campsite.campsite_images[1], :image, :fill, 300, 200, format: "jpeg", fallback: "no-image-camera.png", size: "100x100", class:"d-block w-100 slide-height") %>
+						</div>
+					<% end %>
+					<%if @campsite.campsite_images[2].present? %>
+						<div class="carousel-item">
+							<%= attachment_image_tag(@campsite.campsite_images[2], :image, :fill, 300, 200, format: "jpeg", fallback: "no-image-camera.png", size: "100x100", class:"d-block w-100 slide-height") %>
+						</div>
+					<% end %>
+					<%if @campsite.campsite_images[3].present? %>
+						<div class="carousel-item">
+							<%= attachment_image_tag(@campsite.campsite_images[3], :image, :fill, 300, 200, format: "jpeg", fallback: "no-image-camera.png", size: "100x100", class:"d-block w-100 slide-height") %>
+						</div>
+					<% end %>
+					<%if @campsite.campsite_images[4].present? %>
+						<div class="carousel-item">
+							<%= attachment_image_tag(@campsite.campsite_images[4], :image, :fill, 300, 200, format: "jpeg", fallback: "no-image-camera.png", size: "100x100", class:"d-block w-100 slide-height") %>
+						</div>
+					<% end %>
+				</div>
+				<a href="#c1" class="carousel-control-prev" data-slide="prev">
+					<span class="carousel-control-prev-icon"></span>
+					<span class="sr-only">前の画像へ</span>
+				</a>
+				<a href="#c1" class="carousel-control-next" data-slide="next">
+					<span class="carousel-control-next-icon"></span>
+					<span class="sr-only">次の画像へ</span>
+				</a>
+			</div>
+			<div class="">
+				<%= @campsite.name %><br>
+				<%= @campsite.explanation %><br>
+				<%= @campsite.postcode %><br>
+				<%= @campsite.prefecture.name %>
+				<%= @campsite.address_city %>
+				<%= @campsite.address_street %>
+				<% if @campsite.favorited_by?(current_user) %>
+					<%= link_to public_campsite_favorite_path(@campsite, current_user), method: :delete do %>
+						<i class="fas fa-heart"></i>
+						いいねを外す
+					<% end %>
+				<% else %>
+					<%= link_to public_campsite_favorites_path(@campsite), method: :post do %>
+						<i class="far fa-heart", id="like-off"></i>
+						いいね
+					<% end %>
+				<% end %>
+				<div id="map">
+				<script>
+					function initMap(){
+						let pos = new google.maps.LatLng(
+						   '<%= @campsite.latitude %>',
+						   '<%= @campsite.longitude %>'
+						  );
+						let map = new google.maps.Map(document.getElementById('map'), {
+						zoom: 12,
+						center: pos
+						});
+
+						marker = new google.maps.Marker({
+	     					position: pos,
+	   						map: map
+	   					});
+					}
+				</script>
+				<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['API_KEY'] %>&callback=initMap" async defer></script>
+				</div>
+				<div class="mt-3">
+					<p>○レビュー○</p>
+					<% @campsite_comments.each do |comment| %>
+						<%= comment.comment %>
+						<div id = "star-rate-<%= comment.id %>"></div>
+						<script>
+						  $('#star-rate-<%= comment.id %>').raty({
+						    size: 36,
+						    starOff:  '<%= asset_path('star-off.png') %>',
+						    starOn : '<%= asset_path('star-on.png') %>',
+						    starHalf: '<%= asset_path('star-half.png') %>',
+						    half: true,
+						    readOnly: true,
+						    score: <%= comment.rate %>,
+						  })
+						</script>
+						<% if comment.user == current_user %>
+						<%= link_to "削除", public_campsite_campsite_comment_path(@campsite.id, comment.id), method: :delete %>
 						<% end %>
 					<% end %>
-					<div id="map">
-					<script>
-						function initMap(){
-							let pos = new google.maps.LatLng(
-							   '<%= @campsite.latitude %>',
-							   '<%= @campsite.longitude %>'
-							  );
-							let map = new google.maps.Map(document.getElementById('map'), {
-							zoom: 12,
-							center: pos
-							});
-
-							marker = new google.maps.Marker({
-		     					position: pos,
-		   						map: map
-		   					});
-						}
-					</script>
-					<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['API_KEY'] %>&callback=initMap" async defer></script>
-					</div>
-					<div class="mt-3">
-						<p>○レビュー○</p>
-						<% @campsite_comments.each do |comment| %>
-							<%= comment.comment %>
-							<div id = "star-rate-<%= comment.id %>"></div>
-							<script>
-							  $('#star-rate-<%= comment.id %>').raty({
-							    size: 36,
-							    starOff:  '<%= asset_path('star-off.png') %>',
-							    starOn : '<%= asset_path('star-on.png') %>',
-							    starHalf: '<%= asset_path('star-half.png') %>',
-							    half: true,
-							    readOnly: true,
-							    score: <%= comment.rate %>,
-							  })
-							</script>
-							<% if comment.user == current_user %>
-							<%= link_to "削除", public_campsite_campsite_comment_path(@campsite.id, comment.id), method: :delete %>
-							<% end %>
-						<% end %>
-					</div>
 				</div>
 			</div>
 			<div class="border">
