--- a/app/views/admin/campsites/new.html.erb
+++ b/app/views/admin/campsites/new.html.erb
@@ -44,6 +44,18 @@
 			  <label>画像2</label>
 			  <%= f.attachment_field :campsite_images_images, multiple: true, class:"" %>
 			</div>
+			<div class="form-group">
+			  <label>画像3</label>
+			  <%= f.attachment_field :campsite_images_images, multiple: true, class:"" %>
+			</div>
+			<div class="form-group">
+			  <label>画像4</label>
+			  <%= f.attachment_field :campsite_images_images, multiple: true, class:"" %>
+			</div>
+			<div class="form-group">
+			  <label>画像5</label>
+			  <%= f.attachment_field :campsite_images_images, multiple: true, class:"" %>
+			</div>
 
 			<%= f.submit "登録する", class:"btn btn-success" %>
 			<% end %>
