--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -1,7 +1,13 @@
 <div class="cantainer">
-	<div class="row ">
-		<div class="col-12">
-			<%= @user.name %>
+	<div class="row">
+		<div class="col-4">
+			<div class="border mt-3 text-center">
+				<p>ユーザー名：<%= @user.name %></p>
+				<p>お気に入り数：<%= @user.favorites.count %></p>
+			</div>
+		</div>
+		<div class="col-8">
+			
 		</div>
 	</div>
 </div>
