--- a/app/views/public/campsites/show.html.erb
+++ b/app/views/public/campsites/show.html.erb
@@ -141,6 +141,9 @@
 					<%= f.submit "コメントする", class:"btn btn-success" %>
 				<% end %>
 			</div>
+			<div class="">
+				<%= link_to "写真投稿", new_public_campsite_post_path(@campsite.id), class:"btn" %>
+			</div>
 		</div>
 	</div>
 </div>
