--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -1,4 +1,4 @@
-<div class="cantainer">
+<div class="container">
 	<div class="row">
 		<div class="col-4">
 			<div class="border mt-3 text-center">
