--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,7 +41,13 @@
 	//object-fit: cover;
 }
 
+// .campsite-image {
+// 	width: 100%;
+// 	height: 50vw;
+// 	object-fit: cover;
+// }
+
 .slide-height {
-	height: 300px;
+	height: 500px;
 }
 
