--- a/app/views/public/campsites/index.html.erb
+++ b/app/views/public/campsites/index.html.erb
@@ -59,7 +59,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-11 offset-1">
+		<div class="col-12 mt-2">
 			<h3>キャンプ場一覧</h3>
 		</div>
 	</div>
