--- a/app/views/public/campsites/show.html.erb
+++ b/app/views/public/campsites/show.html.erb
@@ -1,13 +1,10 @@
 <div class="container">
 	<div class="row justify-content-center">
 		<div class="col-10 mt-3">
-			<h3>
-				<%= @campsite.name %>
-				<div id="favorite">
-					<%= render 'public/favorites/favorite', { campsite: @campsite } %>
-				</div>
-			</h3>
-			<div class="carousel slide " id="c1" data-ride="carousel">
+			<div id="favorite" class="campsite-title">
+				<%= render 'public/favorites/favorite', { campsite: @campsite } %>
+			</div>
+			<div class="carousel slide" id="c1" data-ride="carousel">
 				<ol class="carousel-indicators">
 					<li data-target="#c1" data-slide-to="0" class="active"></li>
 					<%if @campsite.campsite_images[1].present? %>
@@ -25,7 +22,7 @@
 				</ol>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<%= attachment_image_tag(@campsite.campsite_images[0], :image, :fill, 300, 200, format: "jpeg", fallback: "no-image-camera.png", size: "100x100", class:"d-block w-100 slide-height") %>
+						<%= attachment_image_tag(@campsite.campsite_images[0], :image, :fill, 350, 200, format: "jpeg", fallback: "no-image-camera.png", size: "100x100", class:"d-block w-100 slide-height") %>
 					</div>
 					<%if @campsite.campsite_images[1].present? %>
 						<div class="carousel-item">
@@ -62,7 +59,9 @@
 	<div class="row justify-content-center">
 		<div class="col-10">
 			<div class="">
+				<h4>概要</h4>
 				<p><%= @campsite.explanation %></p>
+				<h4>所在地</h4>
 				<table class="table">
 					<tr>
 						<th>郵便番号</th>
@@ -71,6 +70,7 @@
 					<tr>
 						<th>住所</th>
 						<td><%= @campsite.prefecture.name %><%= @campsite.address_city %><%= @campsite.address_street %></td>
+					</tr>
 				</table>
 				<div id="map">
 				<script>
